removing backface-visibility, which causes some issues with iPads

--- a/less/app.less
+++ b/less/app.less
@@ -800,8 +800,8 @@ header {
         transition: all 0.25s;
         -webkit-transform: translate3d(0, 0, 0);
         transform: translate(0%, -100%) scale(0.7);
-        -webkit-backface-visibility: hidden;
-	-webkit-perspective: 1000;
+        // -webkit-backface-visibility: hidden;
+        -webkit-perspective: 1000;
 
         @media @screen-small-above {
             width: 75%;
